2006-06-05  Quentin Mathe <qmathe@club-internet.fr>

    * Frameworks/GNUmakefile: Updated to include XWindowServerKit in the build
    process.

2006-05-11  Nicolas Roard <nicolas@roard.com>

    * Themes/Nesedah: Created the Themes directory and imported
    the last version of the Nesedah theme.

2006-02-16  Yen-Ju <yjchenx at gmail>

    * Frameworks/GNUmakefile:
    Do not compile ServicesBarKit on mac. 

2006-02-16  Quentin Mathe <qmathe@club-internet.fr>
    
    * ANNOUNCE: Added Etoile 0.1 press release.

2006-01-18  Quentin Mathe <qmathe@club-internet.fr>
    
    * INSTALL:
    * README: 
    Word wrapped the whole text to 80 characters, removed erratic 
    tabs. Added Michael Hanni (WildMenus) in README Authors list.

2006-01-18  Quentin Mathe <qmathe@club-internet.fr>
    
    * GNUmakefile: Removed superfluous license notice and PMK mention.

2005-11-29  Quentin Mathe <qmathe@club-internet.fr>
    
    * INSTALL: Added (part of the much needed Build Guide).

2005-11-29  Quentin Mathe <qmathe@club-internet.fr>
    
    * README: Added (part of the much needed Build Guide).

2005-11-09  Quentin Mathe <qmathe@club-internet.fr>
    
    Note: pmkfile is deprecated.
    * GNUmakefile: Improved clarity for 'etoile' option.
    * pmkfile: Updated (this file will be removed soon).

2005-06-07  Quentin Mathe <qmathe@club-internet.fr>
	
	Warning! pmkfile not usable (unlike GNUmakefile now).
	* GNUmakefile: Updated to force UnitKit build with 'developer-base=no' 
	when 'make test=yes' is used.

2005-05-21  Quentin Mathe <qmathe@club-internet.fr>
	
	Warning! pmkfile not usable (unlike GNUmakefile now).
	* GNUmakefile: Updated to take in account developer examples.

2005-03-20  Quentin Mathe <qmathe@club-internet.fr>
	
	Warning! pmkfile not usable (unlike GNUmakefile now).
	* GNUmakefile: Updated to take in account user services.

2005-03-12  Quentin Mathe <qmathe@club-internet.fr>
	
	Warning! pmkfile not usable (unlike GNUmakefile now).